pachi_py/goutil.hpp

using smart::ptr;
typedef ptr<PachiBoard> PachiBoardPtr;
// Exposed through Cython
inline PachiBoardPtr CreatePachiBoard(int size) { return PachiBoardPtr(new PachiBoard(size)); }
void GetLegalMoves(PachiBoardPtr b, stone color, bool filter_suicides, std::vector<coord_t>* out);
inline std::vector<coord_t> GetLegalMoves(PachiBoardPtr b, stone color, bool filter_suicides) {
    std::vector<coord_t> out;
    GetLegalMoves(b, color, filter_suicides, &out);
    return out;
}
bool IsTerminal(PachiBoardPtr b);
inline float FastScore(PachiBoardPtr b) { return board_fast_score(b->pachiboard()); }
float OfficialScore(PachiBoardPtr b);
std::string ToString(PachiBoardPtr b);
void PlayInPlace(PachiBoardPtr b, const move& m);
PachiBoardPtr Play(PachiBoardPtr b, const move& m);
inline PachiBoardPtr Play(PachiBoardPtr b, coord_t coord, stone color) {
    move m = {coord, color};
    return Play(b, m);
}
PachiBoardPtr PlayRandom(PachiBoardPtr b, stone color, coord_t *coord);
inline int i_from_xy(board* b, int x, int y) { return board_size(b)-2-y; }
inline int j_from_xy(board* b, int x, int y) { return x-1; }
inline stone board_atij(board* b, int i, int j) { return board_atxy(b, j+1, board_size(b)-2-i); }
inline int coord_ij(board* b, int i, int j) { return coord_xy(b, j+1, board_size(b)-2-i); }
inline int i_from_coord(board* b, coord_t c) { return i_from_xy(b, coord_x(c, b), coord_y(c, b)); }
inline int j_from_coord(board* b, coord_t c) { return j_from_xy(b, coord_x(c, b), coord_y(c, b)); }