pachi_py/pachi/board.h

struct fbook;
/* Some engines might normalize their reading and skip symmetrical
 * moves. We will tell them how can they do it. */
struct board_symmetry {
	/* Playground is in this rectangle. */
	int x1, x2, y1, y2;
	/* d ==  0: Full rectangle
	 * d ==  1: Top triangle */
	int d;
	/* General symmetry type. */
	/* Note that the above is redundant to this, but just provided
	 * for easier usage. */
	enum e_sym type;
};
typedef uint64_t hash_t;
/* XXX: This really belongs in pattern3.h, unfortunately that would mean
 * a dependency hell. */
typedef uint32_t hash3_t; // 3x3 pattern hash
/* Note that "group" is only chain of stones that is solidly
 * connected for us. */
typedef coord_t group_t;
struct group {
	/* We keep track of only up to GROUP_KEEP_LIBS; over that, we
	 * don't care. */
	/* _Combination_ of these two values can make some difference
	 * in performance - fine-tune. */
#define GROUP_KEEP_LIBS 10
	// refill lib[] only when we hit this; this must be at least 2!
	// Moggy requires at least 3 - see below for semantic impact.
#define GROUP_REFILL_LIBS 5
	coord_t lib[GROUP_KEEP_LIBS];
	/* libs is only LOWER BOUND for the number of real liberties!!!
	 * It denotes only number of items in lib[], thus you can rely
	 * on it to store real liberties only up to <= GROUP_REFILL_LIBS. */
	int libs;
};
struct neighbor_colors {
	char colors[S_MAX];
};
/* Point traits bitmap; we update this information incrementally,
 * it can be used e.g. for fast pattern features matching. */
struct btraits {
	/* Number of neighbors we can capture. 0=this move is
	 * not capturing, 1..4=this many neighbors we can capture
	 * (can be multiple neighbors of same group). */
	unsigned cap:3;
	/* Number of 1-stone neighbors we can capture. */
	unsigned cap1:3;
#ifdef BOARD_TRAIT_SAFE
	/* Whether it is SAFE to play here. This is essentially just
	 * cached result of board_safe_to_play(). (Of course the concept
	 * of "safety" is not perfect here, but it's the cheapest
	 * reasonable thing we can do.) */
	bool safe:1;
#endif
	/* Whether we need to re-compute this coordinate; used to
	 * weed out duplicates. Maintained only for S_BLACK. */
	bool dirty:1;
};
/* You should treat this struct as read-only. Always call functions below if
 * you want to change it. */

struct board {
	int size; /* Including S_OFFBOARD margin - see below. */
	int size2; /* size^2 */
	int bits2; /* ceiling(log2(size2)) */
	int captures[S_MAX];
	floating_t komi;
	int handicap;
	/* The ruleset is currently almost never taken into account;
	 * the board implementation is basically Chinese rules (handicap
	 * stones compensation) w/ suicide (or you can look at it as
	 * New Zealand w/o handi stones compensation), while the engine
	 * enforces no-suicide, making for real Chinese rules.
	 * However, we accept suicide moves by the opponent, so we
	 * should work with rules allowing suicide, just not taking
	 * full advantage of them. */
	enum go_ruleset {
		RULES_CHINESE, /* default value */
		RULES_AGA,
		RULES_NEW_ZEALAND,
		RULES_JAPANESE,
		RULES_STONES_ONLY, /* do not count eyes */
		/* http://home.snafu.de/jasiek/siming.html */
		/* Simplified ING rules - RULES_CHINESE with handicaps
		 * counting as points and pass stones. Also should
		 * allow suicide, but Pachi will never suicide
		 * nevertheless. */
		/* XXX: I couldn't find the point about pass stones
		 * in the rule text, but it is Robert Jasiek's
		 * interpretation of them... These rules were
		 * used e.g. at the EGC2012 13x13 tournament.
		 * They are not supported by KGS. */
		RULES_SIMING,
	} rules;

	char *fbookfile;
	struct fbook *fbook;

	/* Iterator offsets for foreach_neighbor*() */
	int nei8[8], dnei[4];

	int moves;
	struct move last_move;
	struct move last_move2; /* second-to-last move */
	struct move last_move3; /* just before last_move2, only set if last_move is pass */
	struct move last_move4; /* just before last_move3, only set if last_move & last_move2 are pass */
	/* Whether we tried to add a hash twice; board_play*() can
	 * set this, but it will still carry out the move as well! */
	bool superko_violation;

	/* The following two structures are goban maps and are indexed by
	 * coord.pos. The map is surrounded by a one-point margin from
	 * S_OFFBOARD stones in order to speed up some internal loops.
	 * Some of the foreach iterators below might include these points;
	 * you need to handle them yourselves, if you need to. */

	/* Stones played on the board */
	enum stone *b; /* enum stone */
	/* Group id the stones are part of; 0 == no group */
	group_t *g;
	/* Positions of next stones in the stone group; 0 == last stone */
	coord_t *p;
	/* Neighboring colors; numbers of neighbors of index color */
	struct neighbor_colors *n;
	/* Zobrist hash for each position */
	hash_t *h;
#ifdef BOARD_SPATHASH
	/* For spatial hashes, we use only 24 bits. */
	/* [0] is d==1, we don't keep hash for d==0. */
	/* We keep hashes for black-to-play ([][0]) and white-to-play
	 * ([][1], reversed stone colors since we match all patterns as
	 * black-to-play). */
	uint32_t (*spathash)[BOARD_SPATHASH_MAXD][2];
#endif
#ifdef BOARD_PAT3
	/* 3x3 pattern code for each position; see pattern3.h for encoding
	 * specification. The information is only valid for empty points. */
	hash3_t *pat3;
#endif
#ifdef BOARD_TRAITS
	/* Incrementally matched point traits information, black-to-play
	 * ([][0]) and white-to-play ([][1]). */
	/* The information is only valid for empty points. */
	struct btraits (*t)[2];
#endif
	/* Cached information on x-y coordinates so that we avoid division. */
	uint8_t (*coord)[2];

	/* Group information - indexed by gid (which is coord of base group stone) */
	struct group *gi;

	/* Positions of free positions - queue (not map) */
	/* Note that free position here is any valid move; including single-point eyes!
	 * However, pass is not included. */
	coord_t *f; int flen;

#ifdef WANT_BOARD_C
	/* Queue of capturable groups */
	group_t *c; int clen;
#endif

#ifdef BOARD_TRAITS
	/* Queue of positions that need their traits updated */
	coord_t *tq; int tqlen;
#endif

	/* Symmetry information */
	struct board_symmetry symmetry;

	/* Last ko played on the board. */
	struct move last_ko;
	int last_ko_age;

	/* Basic ko check */
	struct move ko;

	/* Engine-specific state; persistent through board development,
	 * is reset only at clear_board. */
	void *es;

	/* Playout-specific state; persistent through board development,
	 * but its lifetime is maintained in play_random_game(); it should
	 * not be set outside of it. */
	void *ps;


	/* --- PRIVATE DATA --- */

	/* For superko check: */

	/* Board "history" - hashes encountered. Size of the hash should be
	 * >> board_size^2. */
#define history_hash_bits 12
#define history_hash_mask ((1 << history_hash_bits) - 1)
#define history_hash_prev(i) ((i - 1) & history_hash_mask)
#define history_hash_next(i) ((i + 1) & history_hash_mask)
	hash_t history_hash[1 << history_hash_bits];
	/* Hash of current board position. */
	hash_t hash;
	/* Hash of current board position quadrants. */
	hash_t qhash[4];
};
/* Avoid unused variable warnings */
#define board_size(b_) (((b_) == (b_)) ? BOARD_SIZE + 2 : 0)
#define board_size(b_) ((b_)->size)
#define board_at(b_, c) ((b_)->b[c])
#define board_atxy(b_, x, y) ((b_)->b[(x) + board_size(b_) * (y)])
#define group_at(b_, c) ((b_)->g[c])
#define board_group_info(b_, g_) ((b_)->gi[(g_)])
/* Place given handicap on the board; coordinates are printed to f. */
void board_handicap(struct board *board, int stones, FILE *f);
/* Set board rules according to given string. Returns false in case
 * of unknown ruleset name. */
bool board_set_rules(struct board *board, char *name);